# kstack

./: Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: README.md
docs/advanced/: best-practices.md  migration.md  troubleshooting.md
docs/configuration/: compose-format.md  environment.md  sidecars.md  volumes.md
docs/deployment/: configs.md  resources.md  services.md
docs/getting-started/: commands.md  installation.md  quickstart.md
example/: example-compose.yaml  whoami-compose.yaml  wordpress-config.env  wordpress-db.env
examples/: complex-ingress-loadbalancer.yaml  depends_on.yaml  ingress.yaml  load-balancer.yaml  multi-pod-deployments.yaml  secrets.yaml  sidecars.yaml  simple-deployment.yaml  volumes.yaml
kstack/: __init__.py  entry.py
kstack/cli/: __init__.py  commands.py  display.py  interface.py
kstack/core/: context.py  resource_manager.py
kstack/generators/: __init__.py  base_generator.py  deployment_generator.py  ingress_generator.py  kube_generator.py  service_generator.py  volume_generator.py
kstack/parsers/: __init__.py  compose_parser.py  validators.py
kstack/schemas/: compose_schema.json
tests/: test_generators.py
